Refactor of local js

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>N-Wordcounter</title>
+    <title>Nordcounter</title>
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,8 @@
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script src="js/graph.js"></script>
-    <script src="js/local.js"></script>
+    <!--<script src="js/local.js"></script>-->
+    <script src="js/local_new.js"></script>
 
 </head>
 <body>
@@ -36,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand">N-Wordcounter</a>
+                    <a class="navbar-brand">Nordcounter</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -164,7 +165,7 @@
         <!-- js-only -->
 
         <noscript>
-            <p>This site requires JavaScript</p>
+            <h3>Sorry, this site currently requires JavaScript</h3>
         </noscript>
 
     </div>
