Split refactored local js into controller and load files

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 
-    <title>Nordcounter</title>
+    <title>Top Words Counter</title>
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,8 +21,8 @@
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script src="js/graph.js"></script>
-    <!--<script src="js/local.js"></script>-->
-    <script src="js/local_new.js"></script>
+    <script src="js/ui_controller.js"></script>
+    <script src="js/load.js"></script>
 
 </head>
 <body>
@@ -37,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand">Nordcounter</a>
+                    <a class="home navbar-brand">Top Words Counter</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -53,8 +53,8 @@
     <div class="container">
 
         <div class="jumbotron">
-            <h1>Top <span class="n-words">10</span> Words</h1>
-            <p>Determine the most frequest words in a body of text</p>
+            <h1>Top 10 Words</h1>
+            <p>Determine the ten most frequest words in a body of text</p>
         </div>
 
         <div class="js-only">
