Add support for listing and retrieving recent requests

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -105,7 +105,8 @@
             <!-- input-view-container -->
 
             <div id="in-progress-view-container" class="view-container">
-                <h2>Counting...</h2>
+                <h2 id="in-progress-counting">Counting...</h2>
+                <h2 id="in-progress-retrieving">Retrieving...</h2>
                 <p class="request-id-wrapper">Request ID: <span class="request-id"></span></p>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
